// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-modal-side-sheet-beta renders correctly when open is false 1`] = `
<gux-modal-side-sheet-beta>
  <mock:shadow-root>
    <dialog aria-labelledby="gux-i">
      <gux-side-sheet-beta>
        <mock:shadow-root>
          <div class="gux-side-sheet gux-side-sheet-medium">
            <header>
              <gux-dismiss-button>
                <mock:shadow-root>
                  <gux-button-slot accent="ghost">
                    <button title="Dismiss" type="button">
                      <div class="gux-icon-container">
                        <gux-icon decorative="" icon-name="fa/xmark-large-regular"></gux-icon>
                      </div>
                    </button>
                  </gux-button-slot>
                </mock:shadow-root>
              </gux-dismiss-button>
              <slot name="heading"></slot>
            </header>
            <div class="gux-side-sheet-description">
              <slot name="description"></slot>
            </div>
            <div class="gux-side-sheet-content">
              <slot name="content"></slot>
            </div>
            <footer>
              <slot name="footer"></slot>
            </footer>
          </div>
        </mock:shadow-root>
        <div id="gux-i" slot="heading">
          <slot name="heading"></slot>
        </div>
        <div slot="description">
          <slot name="description"></slot>
        </div>
        <div slot="content">
          <slot name="content"></slot>
        </div>
        <div slot="footer">
          <slot name="footer"></slot>
        </div>
      </gux-side-sheet-beta>
    </dialog>
  </mock:shadow-root>
  <gux-side-sheet-heading icon="fa/diamond-regular" level="2" slot="heading">
    <mock:shadow-root>
      <h2>
        <gux-icon decorative="" icon-name="fa/diamond-regular" size="medium"></gux-icon>
        <gux-truncate>
          <slot></slot>
        </gux-truncate>
      </h2>
    </mock:shadow-root>
    Side sheet title
  </gux-side-sheet-heading>
  <h2 slot="description">
    Description goes here
  </h2>
  <div slot="content">
    Content goes here.
  </div>
  <div slot="footer">
    <gux-cta-group>
      <gux-button slot="primary">
        Primary
      </gux-button>
      <gux-button slot="secondary">
        Secondary
      </gux-button>
      <gux-button slot="dismiss">
        Dismiss
      </gux-button>
    </gux-cta-group>
  </div>
</gux-modal-side-sheet-beta>
`;

exports[`gux-modal-side-sheet-beta renders correctly when open is true 1`] = `
<gux-modal-side-sheet-beta open="">
  <mock:shadow-root>
    <dialog aria-labelledby="gux-i">
      <gux-side-sheet-beta>
        <mock:shadow-root>
          <div class="gux-side-sheet gux-side-sheet-medium">
            <header>
              <gux-dismiss-button>
                <mock:shadow-root>
                  <gux-button-slot accent="ghost">
                    <button title="Dismiss" type="button">
                      <div class="gux-icon-container">
                        <gux-icon decorative="" icon-name="fa/xmark-large-regular"></gux-icon>
                      </div>
                    </button>
                  </gux-button-slot>
                </mock:shadow-root>
              </gux-dismiss-button>
              <slot name="heading"></slot>
            </header>
            <div class="gux-side-sheet-description">
              <slot name="description"></slot>
            </div>
            <div class="gux-side-sheet-content">
              <slot name="content"></slot>
            </div>
            <footer>
              <slot name="footer"></slot>
            </footer>
          </div>
        </mock:shadow-root>
        <div id="gux-i" slot="heading">
          <slot name="heading"></slot>
        </div>
        <div slot="description">
          <slot name="description"></slot>
        </div>
        <div slot="content">
          <slot name="content"></slot>
        </div>
        <div slot="footer">
          <slot name="footer"></slot>
        </div>
      </gux-side-sheet-beta>
    </dialog>
  </mock:shadow-root>
  <gux-side-sheet-heading icon="fa/diamond-regular" level="2" slot="heading">
    <mock:shadow-root>
      <h2>
        <gux-icon decorative="" icon-name="fa/diamond-regular" size="medium"></gux-icon>
        <gux-truncate>
          <slot></slot>
        </gux-truncate>
      </h2>
    </mock:shadow-root>
    Side sheet title
  </gux-side-sheet-heading>
  <h2 slot="description">
    Description goes here
  </h2>
  <div slot="content">
    Content goes here.
  </div>
  <div slot="footer">
    <gux-cta-group>
      <gux-button slot="primary">
        Primary
      </gux-button>
      <gux-button slot="secondary">
        Secondary
      </gux-button>
      <gux-button slot="dismiss">
        Dismiss
      </gux-button>
    </gux-cta-group>
  </div>
</gux-modal-side-sheet-beta>
`;

exports[`gux-modal-side-sheet-beta renders correctly with large size 1`] = `
<gux-modal-side-sheet-beta size="large">
  <mock:shadow-root>
    <dialog aria-labelledby="gux-i">
      <gux-side-sheet-beta>
        <mock:shadow-root>
          <div class="gux-side-sheet gux-side-sheet-large">
            <header>
              <gux-dismiss-button>
                <mock:shadow-root>
                  <gux-button-slot accent="ghost">
                    <button title="Dismiss" type="button">
                      <div class="gux-icon-container">
                        <gux-icon decorative="" icon-name="fa/xmark-large-regular"></gux-icon>
                      </div>
                    </button>
                  </gux-button-slot>
                </mock:shadow-root>
              </gux-dismiss-button>
              <slot name="heading"></slot>
            </header>
            <div class="gux-side-sheet-description">
              <slot name="description"></slot>
            </div>
            <div class="gux-side-sheet-content">
              <slot name="content"></slot>
            </div>
            <footer>
              <slot name="footer"></slot>
            </footer>
          </div>
        </mock:shadow-root>
        <div id="gux-i" slot="heading">
          <slot name="heading"></slot>
        </div>
        <div slot="description">
          <slot name="description"></slot>
        </div>
        <div slot="content">
          <slot name="content"></slot>
        </div>
        <div slot="footer">
          <slot name="footer"></slot>
        </div>
      </gux-side-sheet-beta>
    </dialog>
  </mock:shadow-root>
  <gux-side-sheet-heading icon="fa/diamond-regular" level="2" slot="heading">
    <mock:shadow-root>
      <h2>
        <gux-icon decorative="" icon-name="fa/diamond-regular" size="medium"></gux-icon>
        <gux-truncate>
          <slot></slot>
        </gux-truncate>
      </h2>
    </mock:shadow-root>
    Side sheet title
  </gux-side-sheet-heading>
  <h2 slot="description">
    Description goes here
  </h2>
  <div slot="content">
    Content goes here.
  </div>
  <div slot="footer">
    <gux-cta-group>
      <gux-button slot="primary">
        Primary
      </gux-button>
      <gux-button slot="secondary">
        Secondary
      </gux-button>
      <gux-button slot="dismiss">
        Dismiss
      </gux-button>
    </gux-cta-group>
  </div>
</gux-modal-side-sheet-beta>
`;

exports[`gux-modal-side-sheet-beta renders correctly with medium size 1`] = `
<gux-modal-side-sheet-beta size="medium">
  <mock:shadow-root>
    <dialog aria-labelledby="gux-i">
      <gux-side-sheet-beta>
        <mock:shadow-root>
          <div class="gux-side-sheet gux-side-sheet-medium">
            <header>
              <gux-dismiss-button>
                <mock:shadow-root>
                  <gux-button-slot accent="ghost">
                    <button title="Dismiss" type="button">
                      <div class="gux-icon-container">
                        <gux-icon decorative="" icon-name="fa/xmark-large-regular"></gux-icon>
                      </div>
                    </button>
                  </gux-button-slot>
                </mock:shadow-root>
              </gux-dismiss-button>
              <slot name="heading"></slot>
            </header>
            <div class="gux-side-sheet-description">
              <slot name="description"></slot>
            </div>
            <div class="gux-side-sheet-content">
              <slot name="content"></slot>
            </div>
            <footer>
              <slot name="footer"></slot>
            </footer>
          </div>
        </mock:shadow-root>
        <div id="gux-i" slot="heading">
          <slot name="heading"></slot>
        </div>
        <div slot="description">
          <slot name="description"></slot>
        </div>
        <div slot="content">
          <slot name="content"></slot>
        </div>
        <div slot="footer">
          <slot name="footer"></slot>
        </div>
      </gux-side-sheet-beta>
    </dialog>
  </mock:shadow-root>
  <gux-side-sheet-heading icon="fa/diamond-regular" level="2" slot="heading">
    <mock:shadow-root>
      <h2>
        <gux-icon decorative="" icon-name="fa/diamond-regular" size="medium"></gux-icon>
        <gux-truncate>
          <slot></slot>
        </gux-truncate>
      </h2>
    </mock:shadow-root>
    Side sheet title
  </gux-side-sheet-heading>
  <h2 slot="description">
    Description goes here
  </h2>
  <div slot="content">
    Content goes here.
  </div>
  <div slot="footer">
    <gux-cta-group>
      <gux-button slot="primary">
        Primary
      </gux-button>
      <gux-button slot="secondary">
        Secondary
      </gux-button>
      <gux-button slot="dismiss">
        Dismiss
      </gux-button>
    </gux-cta-group>
  </div>
</gux-modal-side-sheet-beta>
`;

exports[`gux-modal-side-sheet-beta renders correctly with small size 1`] = `
<gux-modal-side-sheet-beta size="small">
  <mock:shadow-root>
    <dialog aria-labelledby="gux-i">
      <gux-side-sheet-beta>
        <mock:shadow-root>
          <div class="gux-side-sheet gux-side-sheet-small">
            <header>
              <gux-dismiss-button>
                <mock:shadow-root>
                  <gux-button-slot accent="ghost">
                    <button title="Dismiss" type="button">
                      <div class="gux-icon-container">
                        <gux-icon decorative="" icon-name="fa/xmark-large-regular"></gux-icon>
                      </div>
                    </button>
                  </gux-button-slot>
                </mock:shadow-root>
              </gux-dismiss-button>
              <slot name="heading"></slot>
            </header>
            <div class="gux-side-sheet-description">
              <slot name="description"></slot>
            </div>
            <div class="gux-side-sheet-content">
              <slot name="content"></slot>
            </div>
            <footer>
              <slot name="footer"></slot>
            </footer>
          </div>
        </mock:shadow-root>
        <div id="gux-i" slot="heading">
          <slot name="heading"></slot>
        </div>
        <div slot="description">
          <slot name="description"></slot>
        </div>
        <div slot="content">
          <slot name="content"></slot>
        </div>
        <div slot="footer">
          <slot name="footer"></slot>
        </div>
      </gux-side-sheet-beta>
    </dialog>
  </mock:shadow-root>
  <gux-side-sheet-heading icon="fa/diamond-regular" level="2" slot="heading">
    <mock:shadow-root>
      <h2>
        <gux-icon decorative="" icon-name="fa/diamond-regular" size="medium"></gux-icon>
        <gux-truncate>
          <slot></slot>
        </gux-truncate>
      </h2>
    </mock:shadow-root>
    Side sheet title
  </gux-side-sheet-heading>
  <h2 slot="description">
    Description goes here
  </h2>
  <div slot="content">
    Content goes here.
  </div>
  <div slot="footer">
    <gux-cta-group>
      <gux-button slot="primary">
        Primary
      </gux-button>
      <gux-button slot="secondary">
        Secondary
      </gux-button>
      <gux-button slot="dismiss">
        Dismiss
      </gux-button>
    </gux-cta-group>
  </div>
</gux-modal-side-sheet-beta>
`;

exports[`gux-side-sheet-beta renders correctly with h1 heading level 1`] = `
<gux-side-sheet-beta size="medium">
  <mock:shadow-root>
    <div class="gux-side-sheet gux-side-sheet-medium">
      <header>
        <gux-dismiss-button>
          <mock:shadow-root>
            <gux-button-slot accent="ghost">
              <button title="Dismiss" type="button">
                <div class="gux-icon-container">
                  <gux-icon decorative="" icon-name="fa/xmark-large-regular"></gux-icon>
                </div>
              </button>
            </gux-button-slot>
          </mock:shadow-root>
        </gux-dismiss-button>
        <slot name="heading"></slot>
      </header>
      <div class="gux-side-sheet-description">
        <slot name="description"></slot>
      </div>
      <div class="gux-side-sheet-content">
        <slot name="content"></slot>
      </div>
      <footer>
        <slot name="footer"></slot>
      </footer>
    </div>
  </mock:shadow-root>
  <gux-side-sheet-heading icon="fa/diamond-regular" level="1" slot="heading">
    <mock:shadow-root>
      <h1>
        <gux-icon decorative="" icon-name="fa/diamond-regular" size="medium"></gux-icon>
        <gux-truncate>
          <slot></slot>
        </gux-truncate>
      </h1>
    </mock:shadow-root>
    Side sheet title
  </gux-side-sheet-heading>
  <h2 slot="description">
    Description goes here
  </h2>
  <div slot="content">
    Content goes here.
  </div>
  <div slot="footer">
    <gux-cta-group>
      <gux-button slot="primary">
        Primary
      </gux-button>
      <gux-button slot="secondary">
        Secondary
      </gux-button>
      <gux-button slot="dismiss">
        Dismiss
      </gux-button>
    </gux-cta-group>
  </div>
</gux-side-sheet-beta>
`;

exports[`gux-side-sheet-beta renders correctly with h2 heading level 1`] = `
<gux-side-sheet-beta size="medium">
  <mock:shadow-root>
    <div class="gux-side-sheet gux-side-sheet-medium">
      <header>
        <gux-dismiss-button>
          <mock:shadow-root>
            <gux-button-slot accent="ghost">
              <button title="Dismiss" type="button">
                <div class="gux-icon-container">
                  <gux-icon decorative="" icon-name="fa/xmark-large-regular"></gux-icon>
                </div>
              </button>
            </gux-button-slot>
          </mock:shadow-root>
        </gux-dismiss-button>
        <slot name="heading"></slot>
      </header>
      <div class="gux-side-sheet-description">
        <slot name="description"></slot>
      </div>
      <div class="gux-side-sheet-content">
        <slot name="content"></slot>
      </div>
      <footer>
        <slot name="footer"></slot>
      </footer>
    </div>
  </mock:shadow-root>
  <gux-side-sheet-heading icon="fa/diamond-regular" level="2" slot="heading">
    <mock:shadow-root>
      <h2>
        <gux-icon decorative="" icon-name="fa/diamond-regular" size="medium"></gux-icon>
        <gux-truncate>
          <slot></slot>
        </gux-truncate>
      </h2>
    </mock:shadow-root>
    Side sheet title
  </gux-side-sheet-heading>
  <h2 slot="description">
    Description goes here
  </h2>
  <div slot="content">
    Content goes here.
  </div>
  <div slot="footer">
    <gux-cta-group>
      <gux-button slot="primary">
        Primary
      </gux-button>
      <gux-button slot="secondary">
        Secondary
      </gux-button>
      <gux-button slot="dismiss">
        Dismiss
      </gux-button>
    </gux-cta-group>
  </div>
</gux-side-sheet-beta>
`;

exports[`gux-side-sheet-beta renders correctly with h3 heading level 1`] = `
<gux-side-sheet-beta size="medium">
  <mock:shadow-root>
    <div class="gux-side-sheet gux-side-sheet-medium">
      <header>
        <gux-dismiss-button>
          <mock:shadow-root>
            <gux-button-slot accent="ghost">
              <button title="Dismiss" type="button">
                <div class="gux-icon-container">
                  <gux-icon decorative="" icon-name="fa/xmark-large-regular"></gux-icon>
                </div>
              </button>
            </gux-button-slot>
          </mock:shadow-root>
        </gux-dismiss-button>
        <slot name="heading"></slot>
      </header>
      <div class="gux-side-sheet-description">
        <slot name="description"></slot>
      </div>
      <div class="gux-side-sheet-content">
        <slot name="content"></slot>
      </div>
      <footer>
        <slot name="footer"></slot>
      </footer>
    </div>
  </mock:shadow-root>
  <gux-side-sheet-heading icon="fa/diamond-regular" level="3" slot="heading">
    <mock:shadow-root>
      <h3>
        <gux-icon decorative="" icon-name="fa/diamond-regular" size="medium"></gux-icon>
        <gux-truncate>
          <slot></slot>
        </gux-truncate>
      </h3>
    </mock:shadow-root>
    Side sheet title
  </gux-side-sheet-heading>
  <h2 slot="description">
    Description goes here
  </h2>
  <div slot="content">
    Content goes here.
  </div>
  <div slot="footer">
    <gux-cta-group>
      <gux-button slot="primary">
        Primary
      </gux-button>
      <gux-button slot="secondary">
        Secondary
      </gux-button>
      <gux-button slot="dismiss">
        Dismiss
      </gux-button>
    </gux-cta-group>
  </div>
</gux-side-sheet-beta>
`;

exports[`gux-side-sheet-beta renders correctly with h4 heading level 1`] = `
<gux-side-sheet-beta size="medium">
  <mock:shadow-root>
    <div class="gux-side-sheet gux-side-sheet-medium">
      <header>
        <gux-dismiss-button>
          <mock:shadow-root>
            <gux-button-slot accent="ghost">
              <button title="Dismiss" type="button">
                <div class="gux-icon-container">
                  <gux-icon decorative="" icon-name="fa/xmark-large-regular"></gux-icon>
                </div>
              </button>
            </gux-button-slot>
          </mock:shadow-root>
        </gux-dismiss-button>
        <slot name="heading"></slot>
      </header>
      <div class="gux-side-sheet-description">
        <slot name="description"></slot>
      </div>
      <div class="gux-side-sheet-content">
        <slot name="content"></slot>
      </div>
      <footer>
        <slot name="footer"></slot>
      </footer>
    </div>
  </mock:shadow-root>
  <gux-side-sheet-heading icon="fa/diamond-regular" level="4" slot="heading">
    <mock:shadow-root>
      <h4>
        <gux-icon decorative="" icon-name="fa/diamond-regular" size="medium"></gux-icon>
        <gux-truncate>
          <slot></slot>
        </gux-truncate>
      </h4>
    </mock:shadow-root>
    Side sheet title
  </gux-side-sheet-heading>
  <h2 slot="description">
    Description goes here
  </h2>
  <div slot="content">
    Content goes here.
  </div>
  <div slot="footer">
    <gux-cta-group>
      <gux-button slot="primary">
        Primary
      </gux-button>
      <gux-button slot="secondary">
        Secondary
      </gux-button>
      <gux-button slot="dismiss">
        Dismiss
      </gux-button>
    </gux-cta-group>
  </div>
</gux-side-sheet-beta>
`;

exports[`gux-side-sheet-beta renders correctly with h5 heading level 1`] = `
<gux-side-sheet-beta size="medium">
  <mock:shadow-root>
    <div class="gux-side-sheet gux-side-sheet-medium">
      <header>
        <gux-dismiss-button>
          <mock:shadow-root>
            <gux-button-slot accent="ghost">
              <button title="Dismiss" type="button">
                <div class="gux-icon-container">
                  <gux-icon decorative="" icon-name="fa/xmark-large-regular"></gux-icon>
                </div>
              </button>
            </gux-button-slot>
          </mock:shadow-root>
        </gux-dismiss-button>
        <slot name="heading"></slot>
      </header>
      <div class="gux-side-sheet-description">
        <slot name="description"></slot>
      </div>
      <div class="gux-side-sheet-content">
        <slot name="content"></slot>
      </div>
      <footer>
        <slot name="footer"></slot>
      </footer>
    </div>
  </mock:shadow-root>
  <gux-side-sheet-heading icon="fa/diamond-regular" level="5" slot="heading">
    <mock:shadow-root>
      <h5>
        <gux-icon decorative="" icon-name="fa/diamond-regular" size="medium"></gux-icon>
        <gux-truncate>
          <slot></slot>
        </gux-truncate>
      </h5>
    </mock:shadow-root>
    Side sheet title
  </gux-side-sheet-heading>
  <h2 slot="description">
    Description goes here
  </h2>
  <div slot="content">
    Content goes here.
  </div>
  <div slot="footer">
    <gux-cta-group>
      <gux-button slot="primary">
        Primary
      </gux-button>
      <gux-button slot="secondary">
        Secondary
      </gux-button>
      <gux-button slot="dismiss">
        Dismiss
      </gux-button>
    </gux-cta-group>
  </div>
</gux-side-sheet-beta>
`;

exports[`gux-side-sheet-beta renders correctly with h6 heading level 1`] = `
<gux-side-sheet-beta size="medium">
  <mock:shadow-root>
    <div class="gux-side-sheet gux-side-sheet-medium">
      <header>
        <gux-dismiss-button>
          <mock:shadow-root>
            <gux-button-slot accent="ghost">
              <button title="Dismiss" type="button">
                <div class="gux-icon-container">
                  <gux-icon decorative="" icon-name="fa/xmark-large-regular"></gux-icon>
                </div>
              </button>
            </gux-button-slot>
          </mock:shadow-root>
        </gux-dismiss-button>
        <slot name="heading"></slot>
      </header>
      <div class="gux-side-sheet-description">
        <slot name="description"></slot>
      </div>
      <div class="gux-side-sheet-content">
        <slot name="content"></slot>
      </div>
      <footer>
        <slot name="footer"></slot>
      </footer>
    </div>
  </mock:shadow-root>
  <gux-side-sheet-heading icon="fa/diamond-regular" level="6" slot="heading">
    <mock:shadow-root>
      <h6>
        <gux-icon decorative="" icon-name="fa/diamond-regular" size="medium"></gux-icon>
        <gux-truncate>
          <slot></slot>
        </gux-truncate>
      </h6>
    </mock:shadow-root>
    Side sheet title
  </gux-side-sheet-heading>
  <h2 slot="description">
    Description goes here
  </h2>
  <div slot="content">
    Content goes here.
  </div>
  <div slot="footer">
    <gux-cta-group>
      <gux-button slot="primary">
        Primary
      </gux-button>
      <gux-button slot="secondary">
        Secondary
      </gux-button>
      <gux-button slot="dismiss">
        Dismiss
      </gux-button>
    </gux-cta-group>
  </div>
</gux-side-sheet-beta>
`;

exports[`gux-side-sheet-beta renders correctly with large size 1`] = `
<gux-side-sheet-beta size="large">
  <mock:shadow-root>
    <div class="gux-side-sheet gux-side-sheet-large">
      <header>
        <gux-dismiss-button>
          <mock:shadow-root>
            <gux-button-slot accent="ghost">
              <button title="Dismiss" type="button">
                <div class="gux-icon-container">
                  <gux-icon decorative="" icon-name="fa/xmark-large-regular"></gux-icon>
                </div>
              </button>
            </gux-button-slot>
          </mock:shadow-root>
        </gux-dismiss-button>
        <slot name="heading"></slot>
      </header>
      <div class="gux-side-sheet-description">
        <slot name="description"></slot>
      </div>
      <div class="gux-side-sheet-content">
        <slot name="content"></slot>
      </div>
      <footer>
        <slot name="footer"></slot>
      </footer>
    </div>
  </mock:shadow-root>
  <gux-side-sheet-heading icon="fa/diamond-regular" level="3" slot="heading">
    <mock:shadow-root>
      <h3>
        <gux-icon decorative="" icon-name="fa/diamond-regular" size="medium"></gux-icon>
        <gux-truncate>
          <slot></slot>
        </gux-truncate>
      </h3>
    </mock:shadow-root>
    Side sheet title
  </gux-side-sheet-heading>
  <h2 slot="description">
    Description goes here
  </h2>
  <div slot="content">
    Content goes here.
  </div>
  <div slot="footer">
    <gux-cta-group>
      <gux-button slot="primary">
        Primary
      </gux-button>
      <gux-button slot="secondary">
        Secondary
      </gux-button>
      <gux-button slot="dismiss">
        Dismiss
      </gux-button>
    </gux-cta-group>
  </div>
</gux-side-sheet-beta>
`;

exports[`gux-side-sheet-beta renders correctly with medium size 1`] = `
<gux-side-sheet-beta size="medium">
  <mock:shadow-root>
    <div class="gux-side-sheet gux-side-sheet-medium">
      <header>
        <gux-dismiss-button>
          <mock:shadow-root>
            <gux-button-slot accent="ghost">
              <button title="Dismiss" type="button">
                <div class="gux-icon-container">
                  <gux-icon decorative="" icon-name="fa/xmark-large-regular"></gux-icon>
                </div>
              </button>
            </gux-button-slot>
          </mock:shadow-root>
        </gux-dismiss-button>
        <slot name="heading"></slot>
      </header>
      <div class="gux-side-sheet-description">
        <slot name="description"></slot>
      </div>
      <div class="gux-side-sheet-content">
        <slot name="content"></slot>
      </div>
      <footer>
        <slot name="footer"></slot>
      </footer>
    </div>
  </mock:shadow-root>
  <gux-side-sheet-heading icon="fa/diamond-regular" level="3" slot="heading">
    <mock:shadow-root>
      <h3>
        <gux-icon decorative="" icon-name="fa/diamond-regular" size="medium"></gux-icon>
        <gux-truncate>
          <slot></slot>
        </gux-truncate>
      </h3>
    </mock:shadow-root>
    Side sheet title
  </gux-side-sheet-heading>
  <h2 slot="description">
    Description goes here
  </h2>
  <div slot="content">
    Content goes here.
  </div>
  <div slot="footer">
    <gux-cta-group>
      <gux-button slot="primary">
        Primary
      </gux-button>
      <gux-button slot="secondary">
        Secondary
      </gux-button>
      <gux-button slot="dismiss">
        Dismiss
      </gux-button>
    </gux-cta-group>
  </div>
</gux-side-sheet-beta>
`;

exports[`gux-side-sheet-beta renders correctly with small size 1`] = `
<gux-side-sheet-beta size="small">
  <mock:shadow-root>
    <div class="gux-side-sheet gux-side-sheet-small">
      <header>
        <gux-dismiss-button>
          <mock:shadow-root>
            <gux-button-slot accent="ghost">
              <button title="Dismiss" type="button">
                <div class="gux-icon-container">
                  <gux-icon decorative="" icon-name="fa/xmark-large-regular"></gux-icon>
                </div>
              </button>
            </gux-button-slot>
          </mock:shadow-root>
        </gux-dismiss-button>
        <slot name="heading"></slot>
      </header>
      <div class="gux-side-sheet-description">
        <slot name="description"></slot>
      </div>
      <div class="gux-side-sheet-content">
        <slot name="content"></slot>
      </div>
      <footer>
        <slot name="footer"></slot>
      </footer>
    </div>
  </mock:shadow-root>
  <gux-side-sheet-heading icon="fa/diamond-regular" level="3" slot="heading">
    <mock:shadow-root>
      <h3>
        <gux-icon decorative="" icon-name="fa/diamond-regular" size="medium"></gux-icon>
        <gux-truncate>
          <slot></slot>
        </gux-truncate>
      </h3>
    </mock:shadow-root>
    Side sheet title
  </gux-side-sheet-heading>
  <h2 slot="description">
    Description goes here
  </h2>
  <div slot="content">
    Content goes here.
  </div>
  <div slot="footer">
    <gux-cta-group>
      <gux-button slot="primary">
        Primary
      </gux-button>
      <gux-button slot="secondary">
        Secondary
      </gux-button>
      <gux-button slot="dismiss">
        Dismiss
      </gux-button>
    </gux-cta-group>
  </div>
</gux-side-sheet-beta>
`;
